part3/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-apps
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: yuc217/log-output:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
