part3/manifests/ping-pong-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
  namespace: devops-apps
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
  - protocol: TCP
    port: 2345
    targetPort: 3000
