part3/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops-apps
  name: postgres
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
